style: fixing spacing in centerKeys

--- a/styles/main.css
+++ b/styles/main.css
@@ -110,10 +110,10 @@ input {
 	z-index: 1;
 	width: 100%;
 	height: 100%;
-	padding-left: 15px;
-	padding-bottom: 72px;
+	padding-left: 10px;
+	padding-bottom: 80px;
 	align-items: flex-end;
-	gap: 20px;
+	gap: 10px;
 }
 
 .centerKey {
@@ -132,10 +132,6 @@ input {
 	align-items: center;
 	font-size: 20pt;
 	transform: rotate(40deg);
-}
-
-#crossKeys {
-	/*--*/
 }
 
 .crosKeyGroup {
